@@ -42,7 +42,7 @@ the BGP FSM enters the ESTABLISHED state.&lt;/p&gt;&lt;table&gt;
                         bgpPeerState=%parm[#2]%&lt;/p&gt;
                 </logmsg>
         <severity>Normal</severity> 
- <alarm-data reduction-key="%uei%:%dpname%:%nodeid%:%interface%" alarm-type="2" />
+ <alarm-data reduction-key="%uei%:%dpname%:%nodeid%:%interface%" alarm-type="2" auto-clean="true" />
 </event>
 <event>
         <mask>
